--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="th">
 <head>
@@ -6,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>GET RICH</title>
   <link rel="stylesheet" href="style.css" />
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body class="dark">
 
@@ -15,8 +13,8 @@
     <h2>เข้าสู่ระบบ</h2>
     <input type="email" id="loginEmail" placeholder="อีเมล" />
     <input type="password" id="loginPassword" placeholder="รหัสผ่าน" />
-    <button id="loginBtn">เข้าสู่ระบบ</button>
-    <button id="registerBtn">สมัครสมาชิก</button>
+    <button onclick="login()">เข้าสู่ระบบ</button>
+    <button onclick="register()">สมัครสมาชิก</button>
     <p id="loginError" class="error-msg"></p>
   </div>
 
@@ -24,12 +22,12 @@
   <div class="container" id="appContainer" style="display:none;">
     <aside id="menu">
       <h2>♠︎♥︎♦︎♣︎♠︎♥︎♦︎♣︎</h2>
-      <button data-page="deposit">เติมเงิน</button>
-      <button data-page="withdraw">ถอนเงิน</button>
-      <button data-page="bet">เดิมพัน</button>
-      <button data-page="all">รายการทั้งหมด</button>
-      <button data-page="summary">สรุปผล</button>
-      <button id="logoutBtn" style="background:#f44336;margin-top:20px;">ออกจากระบบ</button>
+      <button data-page="deposit" onclick="showPage('deposit')">เติมเงิน</button>
+      <button data-page="withdraw" onclick="showPage('withdraw')">ถอนเงิน</button>
+      <button data-page="bet" onclick="showPage('bet')">เดิมพัน</button>
+      <button data-page="all" onclick="showPage('all')">รายการทั้งหมด</button>
+      <button data-page="summary" onclick="showPage('summary')">สรุปผล</button>
+      <button id="logoutBtn" style="background:#f44336;margin-top:20px;" onclick="logout()">ออกจากระบบ</button>
     </aside>
 
     <main id="content">
@@ -38,13 +36,13 @@
       <div id="deposit" class="page">
         <h2>เติมเงิน</h2>
         <input type="number" id="depositInput" placeholder="จำนวนเงิน" />
-        <button id="depositBtn">ยืนยันการเติมเงิน</button>
+        <button onclick="deposit()">ยืนยันการเติมเงิน</button>
       </div>
 
       <div id="withdraw" class="page">
         <h2>ถอนเงิน</h2>
         <input type="number" id="withdrawInput" placeholder="จำนวนเงิน" />
-        <button id="withdrawBtn">ยืนยันการถอนเงิน</button>
+        <button onclick="withdraw()">ยืนยันการถอนเงิน</button>
       </div>
 
       <div id="bet" class="page">
@@ -53,7 +51,7 @@
         <label>ทีมที่เดิมพัน <input type="text" id="betTeam" /></label>
         <label>ค่าน้ำ <input type="number" step="0.01" id="betOdd" /></label>
         <label>จำนวนเงินเดิมพัน <input type="number" id="betAmount" /></label>
-        <button id="placeBetBtn">เพิ่มรายการเดิมพัน</button>
+        <button onclick="placeBet()">เพิ่มรายการเดิมพัน</button>
       </div>
 
       <div id="all" class="page">
@@ -77,6 +75,15 @@
     </main>
   </div>
 
-  <script type="module" src="script.js"></script>
+  <!-- Firebase SDK แบบ non-module -->
+  <script src="https://www.gstatic.com/firebasejs/11.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/11.10.0/firebase-auth.js"></script>
+
+  <!-- Chart.js CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+  <!-- ไฟล์ config และ main script -->
+  <script src="firebase-config.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
